# python-flask-ts-sql-web-boilerplate

./: .dockerignore  .env.example  .gitignore  Dockerfile.development  Dockerfile.production  README.md  app.py  dev.docker-compose.yml  entrypoint.development.sh  entrypoint.production.sh  nginx.conf  prod.docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt  run-tests.sh  test.docker-compose.yml  wsgi.py
.githooks/: pre-commit
migrations/versions/: 2c30acfce628_init.py
src/: __init__.py
src/blueprints/: routes.py
src/configs/: default_config.py  development_config.py  gunicorn_config.py  logger_config.py  production_config.py  testing_config.py
src/constants/: codes.py  messages.py  paths.py  vars.py
src/controllers/: note_controller.py
src/data_access/: note_dao.py
src/models/orm/: note.py
src/services/: note_service.py
src/utils/: error_handler.py  exceptions.py  helpers.py
src/views/: routes.py
tests/: conftest.py
tests/test_blueprints/: test_note_bp.py
tests/test_configs/: test_default_config.py  test_development_config.py  test_gunicorn_config.py  test_logger_config.py  test_production_config.py  test_sql_alchemy_config.py  test_testing_config.py
tests/test_constants/: test_codes.py  test_messages.py  test_paths.py  test_vars.py
tests/test_controllers/: test_note_controller.py
tests/test_data_access/: test_note_dao.py
tests/test_models/: test_note.py
tests/test_services/: test_note_service.py
tests/test_utils/: test_error_handler.py  test_exceptions.py  test_helpers.py
tests/test_views/: test_app_view.py
(+32 files in other folders)
