[project]
name = "python-flask-ts-sql-web-boilerplate"
version = "1.0.0"
description = "Python Flask Ts SQL Web Boilerplate is a production-ready boilerplate for building full-stack web applications with Flask, SQLAlchemy, and TypeScript, designed to eliminate the repetitive setup that comes with every new MVC web project."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
log_cli = true
log_cli_level = "WARNING"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
env = [
    "HOST=0.0.0.0",
    "PORT=5050",
    "SECRET_KEY=secret_key",
    "MYSQL_ROOT_PASSWORD=root",
    "MYSQL_HOST=localhost",
    "MYSQL_PORT=3307",
    "MYSQL_USER=boilerplate_user",
    "MYSQL_PASSWORD=boilerplate_pass",
    "MYSQL_DB_NAME=boilerplate_db",
]


[tool.ruff]
line-length = 160
exclude = [".git", "__pycache__", "env", "venv", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"